Fixed letter spacing of skills' intro

--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -3,6 +3,7 @@
     font-size: 1.2rem;
     margin-bottom: 2em;
     max-width: 30ch;
+    letter-spacing: .05rem;
 }
 
 .skill-cards
